# VimeCpp

./: CMakeLists.txt  LICENCE  README.md
examples/: match_example.cpp  test_project.cpp  user_stats_example.cpp  users_example.cpp
include/: base_types.hpp  client.hpp  guild.hpp  leaderboard.hpp  locale.hpp  match.hpp  misc.hpp  online.hpp  user.hpp  utils.hpp
include/cpr/: accept_encoding.h  curlholder.h  ssl_options.h
src/: CMakeLists.txt  client.cpp  guild.cpp  leaderboard.cpp  locale.cpp  match.cpp  misc.cpp  online.cpp  user.cpp  utils.cpp
